# yawe

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_workflow.yaml  run_basic.py
workflow_engine/: __init__.py  cli.py
workflow_engine/core/: __init__.py  config.py  logger.py  state_manager.py  workflow.py
workflow_engine/tasks/: __init__.py  base.py  command_task.py  factory.py  file_copy_task.py  notification_task.py
workflow_engine/utils/: __init__.py  executor.py  notifier.py  transfer.py
