[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yawe"
version = "1.0.0"
description = "YAWE - Yet Another Workflow Engine: 一个轻量级、配置驱动的工作流任务编排框架"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}
authors = [
    {name = "Tom James", email = "tomjamescn@gmail.com"}
]
keywords = [
    "workflow",
    "task-orchestration",
    "automation",
    "ssh",
    "pipeline",
    "workflow-engine",
    "task-scheduler"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=5.1",
    "Jinja2>=2.11",
    "requests>=2.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/tomjamescn/yawe"
Repository = "https://github.com/tomjamescn/yawe"
"Bug Tracker" = "https://github.com/tomjamescn/yawe/issues"

[project.scripts]
workflow-run = "workflow_engine.cli:main"

[tool.setuptools]
packages = ["workflow_engine", "workflow_engine.core", "workflow_engine.tasks", "workflow_engine.utils"]

[tool.setuptools.package-data]
workflow_engine = ["py.typed"]
